--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <%= link_to 'About', '#', class: 'nav-item nav-link' %>
+              <%= link_to 'Airports', airports_path, class: 'nav-item nav-link' %>
             </div>
         </div>
     </div>
