--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,13 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-info mb-2">
     <div class="container">
-        <%= link_to 'Odin Flight Booker', root_url, class: 'navbar-brand' %>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-              <%= link_to 'Airports', airports_path, class: 'nav-item nav-link' %>
-            </div>
-        </div>
+        <%= link_to 'Greg\'s Flight Booker', root_url, class: 'navbar-brand' %>
+        <%= render 'layouts/search' %>
     </div>
 </nav>
