set booking model / associatioions

--- a/app/views/flights/_flight.html.erb
+++ b/app/views/flights/_flight.html.erb
@@ -3,6 +3,6 @@
     <td><%= flight.arrival.country %></td>
     <td><%= flight.departure_date %></td>
     <td><%= flight.duration.to_s + ' hours' %></td>
-    <td>todo</td>
+    <td>$<%= rand(200) + 50 %></td>
     <td><button class="btn btn-success">Book</button></td>
 </tr>
