--- a/app/views/flights/index.html.erb
+++ b/app/views/flights/index.html.erb
@@ -5,7 +5,7 @@
             <td>To:</td>
             <td>Leaving at:</td>
             <td>Flight time:</td>
-            <td>Occupancy:</td>
+            <td>Price:</td>
             <td>Booking</td>
         </thead>
         <%= render @flights %>
