--- a/app/views/flights/_flight.html.erb
+++ b/app/views/flights/_flight.html.erb
@@ -4,5 +4,5 @@
     <td><%= flight.departure_date %></td>
     <td><%= flight.duration.to_s + ' hours' %></td>
     <td>$<%= rand(200) + 50 %></td>
-    <td><button class="btn btn-success">Book</button></td>
+    <td><%= render 'shared/booking_form', flight: flight %></td>
 </tr>
