fix tests, trouble shoot passengers

--- a/app/views/flights/_flight.html.erb
+++ b/app/views/flights/_flight.html.erb
@@ -1,4 +1,4 @@
-<tr class="flight-<%= flight.id %>">
+<tr id="flight-<%= flight.id %>" class="flight">
     <td><%= flight.departure.country %></td>
     <td><%= flight.arrival.country %></td>
     <td><%= flight.departure_date %></td>
